Bug 253799 - Internal table is not saved correctly
Summary: Internal table is not saved correctly
Status: RESOLVED FIXED
Alias: None
Product: calligrachart
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Johannes Simon
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2010-10-11 01:12 UTC by Johannes Simon
Modified: 2010-10-16 19:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Simon 2010-10-11 01:12:32 UTC
Version:           2.2 (using KDE 4.4.2) 
OS:                Linux

Saving the internal table doesn't work quite correctly yet, I'm not entirely sure how to handle header rows.

Reproducible: Always

Steps to Reproduce:
Open KPresenter, insert chart. Save it. Reopen it.

Actual Results:  
An extra row got inserted into the internal table.

Expected Results:  
Internal table should be exactly the same.
Comment 1 Johannes Simon 2010-10-11 01:14:21 UTC
This is a release blocker for 2.3.
Comment 2 Johannes Simon 2010-10-16 19:13:44 UTC
SVN commit 1186495 by jsimon:

Correctly save internal table. First row always needs to be a header row, before the header row was simply empty.
Also save correct name of internal table, not just "local-table".

CCBUG: 253799

 M  +49 -50    ChartShape.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186495
Comment 3 Johannes Simon 2010-10-16 19:13:47 UTC
SVN commit 1186496 by jsimon:

Do not store table:cell-range-address attribute in PlotArea, instead use the proxy model's cell range address as it is the class that manages all data sets and thus responsible for this. It was never forwarded to PlotArea and thus PlotArea had a wrong range. See comment for ChartProxyModel::cellRangeAddress(). This fixes the bug of a wrong cell range address saved in <chart:plot-area>.

BUG: 253799

 M  +5 -0      ChartProxyModel.cpp  
 M  +10 -0     ChartProxyModel.h  
 M  +2 -22     PlotArea.cpp  
 M  +1 -0      tests/odf/CMakeLists.txt  
 M  +11 -0     tests/odf/TestLoadingBase.cpp  
 M  +4 -0      tests/odf/TestLoadingBase.h  
 A             tests/odf/default-koffice-chart (directory)  
 A             tests/odf/default-koffice-chart/CMakeLists.txt  
 A             tests/odf/default-koffice-chart/TestLoading.cpp   [License: LGPL (v2+)]
 A             tests/odf/default-koffice-chart/TestLoading.h   [License: LGPL (v2+)]
 A             tests/odf/default-koffice-chart/doc (directory)  
 A             tests/odf/default-koffice-chart/doc/content.xml  
 A             tests/odf/default-koffice-chart/doc/meta.xml  
 A             tests/odf/default-koffice-chart/doc/styles.xml  
 A             tests/odf/default-koffice-chart/original-doc.odt  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186496