Do not store table:cell-range-address attribute in PlotArea, instead use the proxy model's cell range address as it is the class that manages all data sets and thus responsible for this. It was never forwarded to PlotArea and thus PlotArea had a wrong range. See comment for ChartProxyModel::cellRangeAddress(). This fixes the bug of a wrong cell range address saved in <chart:plot-area>.

BUG: 253799

svn path=/trunk/koffice/; revision=1186496